--- a/dev/scss/sections/_index-content.scss
+++ b/dev/scss/sections/_index-content.scss
@@ -111,8 +111,8 @@
     }
     // background-color: $blue;
     >div {
-        padding-top: 200px;
-        padding-bottom: 200px;
+        padding-top: 150px;
+        padding-bottom: 150px;
         
         @include md {
             display: grid;
@@ -317,13 +317,13 @@
   publicity
  --------------------------*/
 #index-publicity {
-    padding-top: 100px;
+    padding-top: 50px;
     z-index: 200;
     position: relative;
     background-color: $off-white;
 
     @include lg {
-        height: 100vh;
+        height: 95vh;
     }
 
     >div {
@@ -584,7 +584,7 @@
     background-color: $blue;
     position: relative;
     z-index: 900;
-    padding-top: 100px;
+    padding-top: 50px;
     
         // padding-bottom: 60px;
         // @include md{
@@ -592,7 +592,7 @@
         // }
     
     >div {
-        padding-bottom: 200px;
+        padding-bottom: 150px;
         h3{
             display: flex;
             justify-content: center;
